# PRD

./: .env  AI Music Maker_final_design_spec.md  AI-INTERIOR-SCREENS-SPECIFICATION.md  Budgetly_final_design_spec.md  MEETING_DOCUMENTATION.md  README.md  WealthNest_final_design_spec.md  all_app_flows.txt  all_design_specs.md  app.py  app_flow.py  competitive_analysis.py  config.py  design_spec.md  flow_tree_design.py  flow_tree_service.py  flow_tree_service_single.py  flow_trees_design.py  flow_trees_design_single.py  linkup_service.py  main.py  prd_summarizer.py  prd_summary.md  pyproject.toml  requirements.txt  target_app_design.py  target_app_flow.txt
